# orbit-dual-loadtest

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json
contracts/compute-evm/: ComputeEVM.sol  foundry.toml
contracts/compute-stylus/: Cargo.toml
contracts/compute-stylus/src/: lib.rs
contracts/messaging/: Cargo.toml
contracts/messaging-evm/: MessagingEVM.sol
contracts/messaging/src/: lib.rs  main.rs
docs/: documentation-spec.md
docs/functional/: TOC.md  func-prd-001-chain-deployment.md  func-prd-002-stylus-messaging.md  func-prd-003-tps-load-test.md  top-level-prd.md
docs/skills/: TOC.md
docs/testing/: TOC.md  preconditions-spec.md  reporting-results-spec.md
docs/testing/reports/: deployment-tester-2026-02-27.md  functional-tester-2026-02-27.md  integration-tester-2026-02-27.md  load-tester-2026-02-27.md  performance-tester-2026-02-27.md  security-tester-2026-02-27.md  system-uat-tester-2026-02-27.md
frontend/: package.json  tailwind.config.ts
frontend/src/abi/: MessagingContract.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: BridgeStatus.tsx  MessageList.tsx  SendMessage.tsx
frontend/src/config/: chains.ts  wagmi.ts
scripts/: check-status.sh  deploy-chain.ts  deploy-contract.sh  kickoff.sh  run-burst-comparison.sh  run-compute-comparison.sh  run-load-tests.sh  start-node.sh  verify-chain.ts
tests/load/: package.json  tsconfig.json
tests/load/src/: burst-comparison.ts  burst-utils.ts  compute-comparison.ts  concurrent.ts  message-size.ts  run-all.ts  utils.ts  (+2 more)
